--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "init:dev": "sls deploy --stage development",
     "init:prod": "sls deploy --stage production",
-    "deploy:dev": "sls deploy function -f event --stage development",
-    "deploy:production": "sls deploy function -f event --stage production",
+    "deploy:dev": "sls deploy function -f createPayment --stage development",
+    "deploy:production": "sls deploy function -f createPayment --stage production",
     "dev": "sls offline start --stage development",
     "dev:production": "sls offline start --stage production"
   },
@@ -18,15 +18,17 @@
     "@types/aws-lambda": "^8.10.98",
     "@types/node": "^17.0.39",
     "@types/serverless": "^3.12.7",
+    "@types/uuid": "^8.3.4",
     "@types/yup": "^0.29.14",
     "husky": "^8.0.1",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
-    "serverless": "^3.19.0",
+    "serverless": "^2.15.0",
     "serverless-bundle": "^5.3.0",
     "serverless-offline": "^8.8.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.1148.0",
     "dynamoose": "^2.8.5",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
