--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -26,4 +26,18 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
     - name: Start
-      run: echo Payments API CI/CD Start
+      run: |
+          if [[ `git diff --name-only HEAD~1 HEAD | grep serverless.yml` ]]; then
+            # Deploy entire service and infrastructure changes
+            yarn sls deploy --stage development
+          else
+            # Deploy functions only
+            yarn sls deploy function -f createPayment --stage development
+            yarn sls deploy function -f updatePayment --stage development
+            yarn sls deploy function -f getPayment --stage development
+            yarn sls deploy function -f listPayments --stage development
+            yarn sls deploy function -f deletePayment --stage development
+          fi
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
