--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -29,6 +29,14 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
+    - name: Get env
+      run: |
+        aws s3 cp s3://payments-env-vars/.env. .env
+      - run:
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: 'ap-southeast-2'
     - name: Serverless Deploy
       uses: serverless/github-action@v3.1
       with:
@@ -36,3 +44,4 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: 'ap-southeast-2'
