--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -28,11 +28,10 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
+        cache: yarn
     - name: Get env
       run: |
         aws s3 cp s3://payments-env-vars/.env. .env
-      - run:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
