--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -31,7 +31,7 @@ jobs:
         cache: yarn
     - name: Get env
       run: |
-        aws s3 cp s3://payments-env-vars/.env. .env
+        aws s3 cp s3://payments-env-vars/.env .env
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
