--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -37,9 +37,8 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: 'ap-southeast-2'
     - name: Serverless Deploy
-      uses: serverless/github-action@v2.18.0
-      with:
-        args: deploy --stage development
+      run: |
+        serverless deploy --stage development
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
