--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -38,6 +38,7 @@ jobs:
         AWS_DEFAULT_REGION: 'ap-southeast-2'
     - name: Serverless Deploy
       run: |
+        npm install -g serverless
         serverless deploy --stage development
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
