--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -38,6 +38,7 @@ jobs:
         AWS_DEFAULT_REGION: 'ap-southeast-2'
     - name: Serverless Deploy
       run: |
+        yarn
         npm install -g serverless@2
         serverless deploy --stage development
       env:
