Fix syntax error in config.yml

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -44,7 +44,7 @@ jobs:
           serverless deploy --stage development
         elif [ ${GITHUB_REF##*/} == "main" ]; then
           serverless deploy --stage production
-        else;
+        else
           echo "Skipping deployment"
         fi
       env:
