--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -41,6 +41,7 @@ jobs:
           echo "Skipping deployment"
         fi
       env:
+        STAGE: ${{ secrets.STAGE }}
+        REGION: ${{ secrets.REGION }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: 'ap-southeast-2'
