--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -13,6 +13,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+
     defaults:
       run:
         shell: bash
@@ -21,6 +22,12 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x]
+
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+      ENVIRONMENT_NAME: ${{ secrets.ENVIRONMENT_NAME }}
 
     steps:
     - uses: actions/checkout@v3
@@ -36,16 +43,8 @@ jobs:
         else
           aws s3 cp s3://payments-env-vars/.env.dev .env
         fi
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
     - name: Serverless Deploy
       run: |
         yarn
         npm install -g serverless@3
-        serverless deploy --stage ${{ secrets.ENVIRONMENT_NAME }}
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+        serverless deploy --stage ${{ env.ENVIRONMENT_NAME }}
