--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -5,7 +5,7 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main", "develop" ]
+    branches: [ "main", "develop", "feature/ci" ]
   pull_request:
     branches: [ "main", "develop" ]
 
