--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -35,7 +35,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: yarn
+        # cache: yarn
     - name: Get env
       run: |
         if [ ${GITHUB_REF##*/} == "main" ]; then
