--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -46,4 +46,5 @@ jobs:
     - name: Serverless Deploy
       run: |
         yarn
+        npm install -g serverless@3
         serverless deploy --stage development
