--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -48,4 +48,6 @@ jobs:
         yarn
         npm install -g serverless@3
         echo "Env is this: ${ENVIRONMENT_NAME}"
+        echo "Env is this: ${env.ENVIRONMENT_NAME}"
+        echo "Env is this: ${{ env.ENVIRONMENT_NAME}}"
         # serverless deploy --stage "${ENVIRONMENT_NAME}"
