--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -47,6 +47,6 @@ jobs:
       run: |
         yarn
         npm install -g serverless@3
-        echo "Env is this: ${ENVIRONMENT_NAME}"
+        echo "Env is this: $ENVIRONMENT_NAME"
         echo "Env is this: ${{env.ENVIRONMENT_NAME}}"
         # serverless deploy --stage "${ENVIRONMENT_NAME}"
