--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -27,7 +27,6 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-      ENVIRONMENT_NAME: ${{ secrets.ENVIRONMENT_NAME }}
 
     steps:
     - uses: actions/checkout@v3
@@ -47,6 +46,6 @@ jobs:
       run: |
         yarn
         npm install -g serverless@3
-        serverless deploy --stage ${ENVIRONMENT_NAME}
+        serverless deploy --stage $(echo ${Env:ENVIRONMENT_NAME})
       env:
         ENVIRONMENT_NAME: ${{ secrets.ENVIRONMENT_NAME }}
