--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -47,7 +47,4 @@ jobs:
       run: |
         yarn
         npm install -g serverless@3
-        echo "${{ secrets.ENVIRONMENT_NAME }}"
-        echo "$ENVIRONMENT_NAME"
-        echo "${{ env.ENVIRONMENT_NAME }}"
-        # serverless deploy --stage ${env:ENVIRONMENT_NAME}
+        serverless deploy --stage $ENVIRONMENT_NAME
