--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -2,7 +2,7 @@ name: Payments API - DEV
 
 on:
   push:
-    branches: [ "develop", "feature/ci" ]
+    branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
 
@@ -33,7 +33,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        # cache: yarn
+        cache: yarn
     - name: Get env
       run: |
         aws s3 cp s3://payments-env-vars/.env.dev .env
